brat/test/golden/error/fanout-not-enough-overs.brat
f(Vec(Nat, 2)) -> Nat, Nat, Nat
f = { [/\] }
